# fastapi-mlflow-example

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: config.py  inference_service.py  model_manager.py
app/routes/v1/: inference_router.py
tests/: test_predict_route.py
