[tool.poetry]
name = "fastapi-inference"
version = "0.1.0"
description = ""
authors = ["Itay Ben Haim <itay.benhaim@superwise.ai>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
numpy = "^1.26.4"
setuptools = "^69.1.1"
mlflow = "^2.11.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
